--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,6 @@
-{{page-title "MyRfc931Repro"}}
+{{page-title "MyAppTest"}}
 
 {{outlet}}
 
-{{! The following component displays Ember's default welcome message. }}
-<WelcomePage />
-{{! Feel free to remove this! }}
+
+<Demo />
